test/files/neg/t5956.scala
//> using options -deprecation
//
object O { case class C[T](); class C() }
object T { case class C[T](); case class C() }
