test/files/neg/t5956.check
t5956.scala:3: error: C is already defined as case class C
object O { case class C[T](); class C() }
                                    ^
t5956.scala:4: error: C is already defined as case class C
object T { case class C[T](); case class C() }
                                         ^
two errors found
